tests/fixtures/svs-v3/invalid/missing-signature.hex
24370635071508036e646e080b7376732d76332d746573743601031400151ac918ca16070908046e6f6465080161d209d4046553f100d60101
